@@ -1,3 +1,7 @@
+repoze.profile (unreleased)
+
+  Bump ez_setup.py version.
+
 repoze.profile 0.3 (2008-02-20)
 
   Compatibility with Python 2.5.
